Cross Validation & Stride 2.

--- a/notebook/make_pseudo3D_images.ipynb
+++ b/notebook/make_pseudo3D_images.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +49,14 @@
     "\n",
     "train_patient_series = pd.read_csv(\n",
     "    r\"D:\\RSNA2023\\data\\train_series_meta.csv\"\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "stride = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,8 @@
     "    train_patient_info,\n",
     "    train_patient_series,\n",
     "    train_image_root_dir,\n",
-    "    img_extension=\".png\"\n",
+    "    img_extension=\".png\",\n",
+    "    stride=stride\n",
     ")\n",
     "\n",
     "dataloader = DataLoader(dataset, 1, False)\n"
@@ -71,27 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4711it [1:34:22,  1.20s/it]\n"
+      "4711it [13:11,  5.95it/s]\n"
      ]
     }
    ],
    "source": [
     "for i , (inputs, labels) in tqdm(enumerate(dataloader)):\n",
-    "    # dir_path/patient_id/series_id + \".png\"\n",
+    "    # dir_path/patient_id/series_id + \"-\" +stride+ \".png\"\n",
     "    write_path =  (\n",
     "        train_image_root_dir / \n",
     "        str(train_patient_series.iloc[i, 0]) / \n",
-    "        (str(train_patient_series.iloc[i, 1]) + \".png\")\n",
+    "        (f\"{str(train_patient_series.iloc[i, 1])}-{stride:02}.png\")\n",
     "    )\n",
-    "    # display(train_patient_series.merge(train_patient_info).iloc[i, [0, 1, 5, 7, 9, 10, 12, 13, 15, 16, 17, 3]])\n",
-    "    # print(labels)\n",
     "    write_png(inputs.to(\"cpu\")[0], str(write_path))\n"
    ]
   }
